--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="MainData" class="container-fluid">
         <div class="row">
             <div class="col-lg-6 box" id="intro">
-                <h1 class="Heading">Why Choose Us?</h1>
+                <h1 class="Heading"><span class="headblue">Why Choose Us?</span></h1>
                 <p class="Para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, aut aliquid totam autem optio animi corrupti consequatur
                     nihil pariatur deserunt aspernatur! Deleniti architecto a modi? Necessitatibus officia cumque dignissimos exercitationem dicta modi excepturi distinctio rerum. Quibusdam at mollitia quisquam. Voluptas, veritatis adipisci quos quasi
                     eaquis temporibus tempore delectus aliquid eum blanditiis quod nulla porro earum? Sed quod dignissimos optio doloribus, eos eius dolore id!</p>
@@ -103,7 +103,7 @@
     <!-- Contact Form  -->
     <div class="contact-part">
         <svg preserveAspectRatio="none" viewBox="0 0 100 102" height="75" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0 L50 100 L100 0 Z" fill="#CACACA" stroke="#CACACA"></path>
+            <path d="M0 0 L50 100 L100 0 Z" fill="#2a3758" stroke="#2a3758"></path>
         </svg>
         <div id="contact">
             <div class="row">
