--- a/1/index.html
+++ b/1/index.html
@@ -114,7 +114,7 @@
     <!-- Contact Form  -->
     <div class="contact-part">
         <svg preserveAspectRatio="none" viewBox="0 0 100 102" height="75" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0 L50 100 L100 0 Z" fill="#2a3758" stroke="#2a3758"></path>
+            <path d="M0 0 L50 100 L100 0 Z" fill="#181f31" stroke="#181f31"></path>
         </svg>
         <div id="contact">
             <div class="row">
