--- a/1/index.html
+++ b/1/index.html
@@ -27,16 +27,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link nav-link-ltr" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link nav-link-ltr" href="#maincontactform">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Firms</a>
+                        <a class="nav-link nav-link-ltr" href="#">Our Firms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Products &amp; Services</a>
+                        <a class="nav-link nav-link-ltr" href="#">Products &amp; Services</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
         <p class="Para borderb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, aut aliquid totam autem optio animi corrupti consequatur nihil
             pariatur deserunt aspernatur! Deleniti architecto a modi? Necessitatibus officia cumque dignissimos exercitationem dicta modi excepturi distinctio rerum. Quibusdam at mollitia quisquam. Voluptas, veritatis adipisci quos quasi eaquis temporibus
             tempore delectus aliquid eum blanditiis quod nulla porro earum? Sed quod dignissimos optio doloribus, eos eius dolore id!</p>
-        <btn id="btngit2">GET IN TOUCH</btn>
+        <a href="#maincontactform" id="btngit2">GET IN TOUCH</a>
     </div>
 
 
@@ -112,7 +112,7 @@
     <!-- Partners Part ends here  -->
 
     <!-- Contact Form  -->
-    <div class="contact-part">
+    <div class="contact-part" id="maincontactform">
         <svg preserveAspectRatio="none" viewBox="0 0 100 102" height="75" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 0 L50 100 L100 0 Z" fill="#181f31" stroke="#181f31"></path>
         </svg>
@@ -130,7 +130,7 @@
                                     <input type="text" name="subject" class="form-control" placeholder="Subject" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" class="form-control" placeholder="Enter Your Email Address" required>
+                                    <input type="email" name="email" class="form-control" placeholder="Email Address" required>
                                 </div>
                                 <div class="form-group">
                                     <textarea class="form-control" name="message" rows="3" placeholder="Enter Your Message" required></textarea>
