--- a/1/index.html
+++ b/1/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nepal Machinery Exim</title>
+    <title>Nepal Machinery Exim | Home</title>
     <link rel="shortcut icon" href="Images/NepalMachineryEximLogo.png">
     <!-- Linked CSS Files are below  -->
     <link rel="stylesheet" href="CSS/index.css">
@@ -45,28 +45,12 @@
     <!-- Navigation Bar ends here  -->
 
     <!--	Content with intro and vector goes here -->
-    <!-- <div id="MainData" class="container-fluid">
-        <div class="row">
-            <div class="col-lg-6 box" id="intro">
-                <h1 class="Heading"><span class="headblue">Why Choose Us?</span></h1>
-                <p class="Para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, aut aliquid totam autem optio animi corrupti consequatur
-                    nihil pariatur deserunt aspernatur! Deleniti architecto a modi? Necessitatibus officia cumque dignissimos exercitationem dicta modi excepturi distinctio rerum. Quibusdam at mollitia quisquam. Voluptas, veritatis adipisci quos quasi
-                    eaquis temporibus tempore delectus aliquid eum blanditiis quod nulla porro earum? Sed quod dignissimos optio doloribus, eos eius dolore id!</p>
-                <btn id="btngit">GET IN TOUCH</btn> -->
-    <!--				add arrow here -->
-    <!-- </div>
-            <div class="col-lg-6 box" id="vector">
-                <img src="Images/gears1.png" alt="" id="vecimg">
-            </div>
-        </div>
-    </div> -->
-
-    <div id="trial">
-        <h1 class="Heading borderb" id="parap">Why choose us?</h1>
-        <p class="Para borderb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, aut aliquid totam autem optio animi corrupti consequatur nihil
+    <div id="MainData">
+        <h1 class="Heading" id="IntroHead">Why choose us?</h1>
+        <p id="IntroContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, aut aliquid totam autem optio animi corrupti consequatur nihil
             pariatur deserunt aspernatur! Deleniti architecto a modi? Necessitatibus officia cumque dignissimos exercitationem dicta modi excepturi distinctio rerum. Quibusdam at mollitia quisquam. Voluptas, veritatis adipisci quos quasi eaquis temporibus
             tempore delectus aliquid eum blanditiis quod nulla porro earum? Sed quod dignissimos optio doloribus, eos eius dolore id!</p>
-        <a href="#maincontactform" id="btngit2">GET IN TOUCH</a>
+        <a href="#maincontactform" id="IntroButton">GET IN TOUCH</a>
     </div>
 
 
@@ -75,7 +59,7 @@
 
     <!--	Logos of various partners starts here -->
     <div class="container-fluid" id="Partners">
-        <h1 class="Heading" id="parap">Our Partners</h1>
+        <h1 class="Heading" id="PartnersHead">Our Partners</h1>
         <div id="PartnerLogos">
             <div class="plogo">
                 <img src="Images/Logo1.png" alt="" class="logoimg">
