--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#"><img src="Images/NepalMachineryEximLogo.png" alt="Company Logo" width="250px"></a>
+            <a class="navbar-brand" href="#"><img src="Images/NepalMachineryEximLogo.png" alt="Company Logo" width="220px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-ltr" href="#">Home</a>
+                        <a class="nav-link nav-link-ltr" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-ltr" href="#maincontactform">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-ltr" href="#">Our Firms</a>
+                        <a class="nav-link nav-link-ltr" href="firms.html">Our Firms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-ltr" href="#">Products &amp; Services</a>
+                        <a class="nav-link nav-link-ltr" href="Products.html">Products &amp; Services</a>
                     </li>
                 </ul>
             </div>
@@ -58,6 +58,7 @@
             pariatur deserunt aspernatur! Deleniti architecto a modi? Necessitatibus officia cumque dignissimos exercitationem dicta modi excepturi distinctio rerum. Quibusdam at mollitia quisquam. Voluptas, veritatis adipisci quos quasi eaquis temporibus
             tempore delectus aliquid eum blanditiis quod nulla porro earum? Sed quod dignissimos optio doloribus, eos eius dolore id!</p>
         <a href="#maincontactform" id="IntroButton">GET IN TOUCH</a>
+        <a href="Products.html" id="IntroButton">SEE OUR PRODUCTS</a>
     </div>
 
 
@@ -148,7 +149,7 @@
     <!-- Footer starts here  -->
     <footer id="footer">
         <div class="footer-up">
-            <a href="#grad" class="btn btn-lg"><i class="fas fa-angle-double-up"><img src="Images/next.png" class="img-fluid" alt="Placeholder image" width="20px"></i></a>
+            <a href="#topheader" class="btn btn-lg"><i class="fas fa-angle-double-up"><img src="Images/next.png" class="img-fluid" alt="Placeholder image" width="20px"></i></a>
         </div>
         <div class="footer-icons">
             <a href="https://www.facebook.com/anirudhagrawal411/" class="btn">
