--- a/Products.html
+++ b/Products.html
@@ -27,23 +27,23 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-color ">
-            <a class="navbar-brand" href="#"><img src="Images/NepalMachineryEximLogo.png" alt="Company Logo" width="250px" class="navimg"></a>
+            <a class="navbar-brand" href="#"><img src="Images/NepalMachineryEximLogo.png" alt="Company Logo" width="220px" class="navimg"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item top-nav-item">
-                        <a class="nav-link nav-link-ltr top-nav-link" href="#">Home</a>
+                        <a class="nav-link nav-link-ltr top-nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item top-nav-item">
-                        <a class="nav-link nav-link-ltr top-nav-link" href="#maincontactform">Contact Us</a>
+                        <a class="nav-link nav-link-ltr top-nav-link" href="index.html#maincontactform">Contact Us</a>
                     </li>
                     <li class="nav-item top-nav-item">
-                        <a class="nav-link nav-link-ltr top-nav-link" href="#">Our Firms</a>
+                        <a class="nav-link nav-link-ltr top-nav-link" href="firms.html">Our Firms</a>
                     </li>
                     <li class="nav-item top-nav-item">
-                        <a class="nav-link nav-link-ltr top-nav-link" href="#">Products &amp; Services</a>
+                        <a class="nav-link nav-link-ltr top-nav-link" href="Products.html">Products &amp; Services</a>
                     </li>
                 </ul>
             </div>
@@ -1759,6 +1759,21 @@
     </div>
     <!-- Side Bar with Main Content ends here  -->
 
+
+    <!-- Footer starts here  -->
+    <footer id="footer">
+        <div class="footer-icons">
+            <a href="https://www.facebook.com/anirudhagrawal411/" class="btn">
+                <i class="fab fa-facebook-f"><img src="Images/facebook.png" class="img-fluid" alt="Placeholder image"></i></a>
+            <a href="https://instagram.com/__.anirudh.__" class="btn"><i class="fab fa-codepen"><img src="Images/instagram.png" class="img-fluid" alt="Placeholder image" data-aos-delay="300"></i></a>
+            <a href="https://discord.com/channels/@me/753886670641954866" class="btn"><i class="fab fa-github"><img src="Images/linkedin.png" class="img-fluid" alt="Placeholder image"></i></a>
+        </div>
+        <p><span>Office:</span> Alakhiya Road, Birgunj, Nepal.</p>
+        <p><span>Contact:</span> +977- 98025 25888</p>
+        <p><span>Email:</span> info.nmexim@gmail.com</p>
+        <p class="copyr"><span>&copy; 2021. Nepal Machinery Exim - All Rights Reserved</span></p>
+    </footer>
+    <!-- Footer Ends Here  -->
     <!-- External JS Files are below  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="JS/sidebar.js"></script>
