--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <a class="navbar-brand" href="#"><img src="Images/NepalMachineryEximLogo.png" alt="Company Logo" width="200px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
@@ -45,6 +45,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nav-link-ltr" href="#maincontactform">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="my-1 mx-2 close">X</span>
+                            </button>
+
                         </li>
                     </ul>
                 </div>
