--- a/Navs/White/index.html
+++ b/Navs/White/index.html
@@ -71,7 +71,7 @@
     <div class="container-fluid" id="CEOmessage">
         <div class="row">
             <div class="col-md-6" id="ceopic">
-                <img src="Images/ceo1.jpeg" alt="" width="50%">
+                <img src="Images/ceo1.jpeg" alt="" width="50%" style="border: 3px solid black; border-radius: 10px;">
                 <p>Mr. Adarsh Sarawagi
                     <br> Managing Director</p>
             </div>
