Update with my content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <!-- Navigation Bar ends here  -->
         <!--	Content with intro and vector goes here -->
         <div id="MainData">
-            <p id="IntroContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem ut omnis dolore amet laboriosam exercitationem magni. In officia alias molestias atque esse consequuntur facere, <strong>aut aliquid totam autem optio animi corrupti consequatur nihil.</strong></p>
+            <p id="IntroContent"><span class="introline"> <strong>Nepal Machinery,</strong> the leading name in industry and synonymous with ‘trust’.</span>
+                <br> We are committed to value, <strong>committed to you!</strong></p>
             <a href="#maincontactform" id="IntroButton">GET IN TOUCH</a>
             <a href="Products.html" id="IntroButton">SEE OUR PRODUCTS</a>
         </div>
@@ -78,9 +79,20 @@
             </div>
             <div class="col-md-6 justify-content-center align-self-center" id="ceotext" data-aos="fade-left" data-aos-duration="600">
                 <p class="CEOhead">CEO's Message</p>
-                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, vitae. Architecto vitae soluta laborum modi culpa neque sed perspiciatis quis reiciendis necessitatibus. Sed praesentium fuga quas illum esse voluptatem mollitia. Lorem ipsum
-                    dolor sit amet consectetur adipisicing elit. Eius molestias fuga amet optio assumenda ab quaerat alias ratione voluptates facere aliquid, adipisci itaque dolorem? Laudantium reiciendis amet neque facilis quae. Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Iure quas commodi veritatis ex quam veniam ullam asperiores. Tenetur ipsam dignissimos illum? "</p>
+                <p>"We built our reputation by meeting the expectations of our employees, associated principals and suppliers, as well as the clients. We invest in our people to preserve the foundations and apply our core beliefs to the dynamic environment
+                    where we operate.</p>
+                <p>At Nepal Machinery, we adopt a long-term perspective approach; our relationships founded on trust built our credibility within the industry. We have strong values of honour, cooperation, clear communication and the confidence</p>
+                that comes from being supported in a unit.
+                <p> While we are proud of our past, we are looking forward to the future with optimism. We are continuously identifying, exploring and creating solutions to contribute positively to the industry and country for the long-term sustainability
+                    of all. "
+                </p>
+                <!-- <p>"We built our reputation by meeting the expectations of our employees, associated principals and suppliers, as well as the clients. We invest in our people to preserve the foundations and apply our core beliefs to the dynamic environment
+                    where we operate.
+                    <br> At Nepal Machinery, we adopt a long-term perspective approach; our relationships founded on trust built our credibility within the industry. We have strong values of honour, cooperation, clear communication and the confidence
+                    that comes from being supported in a unit.
+                    <br> While we are proud of our past, we are looking forward to the future with optimism. We are continuously identifying, exploring and creating solutions to contribute positively to the industry and country for the long-term sustainability
+                    of all. "
+                </p> -->
             </div>
         </div>
     </div>
@@ -90,10 +102,21 @@
     <div class="contanier-fluid" id="AboutUs">
         <div class="row">
             <div class="col-md-6 justify-content-center align-self-center" id="abouttext" data-aos="zoom-in" data-aos-duration="600">
-                <p class="CEOhead">About Us</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, vitae. Architecto vitae soluta laborum modi culpa neque sed perspiciatis quis reiciendis necessitatibus. Sed praesentium fuga quas illum esse voluptatem mollitia. Lorem ipsum
-                    dolor sit amet consectetur adipisicing elit. Eius molestias fuga amet optio assumenda ab quaerat alias ratione voluptates facere aliquid, adipisci itaque dolorem? Laudantium reiciendis amet neque facilis quae. Lorem ipsum dolor sit,
-                    amet consectetur adipisicing elit. Iure quas commodi veritatis ex quam veniam ullam asperiores. Tenetur ipsam dignissimos illum? </p>
+                <p class="CEOhead" id="abouthead">About Us</p>
+                <p>Nepal Machinery Exim, or NME, was established in the year ____ to bring in Nepal its exceptional range of machines. Since then, Nepal Machinery has established itself as a leading name in the Nepal Machinery Industry with its countrywide
+                    network of strong sales, service support and professional management.
+                </p>
+                <p>From Construction machines, Electrical and Kitchen equipment and Workshop machinery, we offer a mammoth range of state-of-the-art products from across the globe. With a team of professionals and more than a thousand varying products, we
+                    guarantee satisfaction to all customers.
+                </p>
+                <p>A well-known name in providing professional and committed services is Nepal Machinery’s strength which is evident by its growing customer base in all classified industries.
+                </p>
+                <!-- <p>Nepal Machinery Exim, or NME, was established in the year ____ to bring in Nepal its exceptional range of machines. Since then, Nepal Machinery has established itself as a leading name in the Nepal Machinery Industry with its countrywide
+                    network of strong sales, service support and professional management.
+                    <br> From Construction machines, Electrical and Kitchen equipment and Workshop machinery, we offer a mammoth range of state-of-the-art products from across the globe. With a team of professionals and more than a thousand varying products,
+                    we guarantee satisfaction to all customers.
+                    <br> A well-known name in providing professional and committed services is Nepal Machinery’s strength which is evident by its growing customer base in all classified industries.
+                </p> -->
             </div>
             <div class="col-md-6 aboutimgdiv">
                 <img src="Images/about.jpg" alt="" class="aboutimg">
