Uppdate with content fix

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <p class="CEOhead">CEO's Message</p>
                 <p>"We built our reputation by meeting the expectations of our employees, associated principals and suppliers, as well as the clients. We invest in our people to preserve the foundations and apply our core beliefs to the dynamic environment
                     where we operate.</p>
-                <p>At Nepal Machinery, we adopt a long-term perspective approach; our relationships founded on trust built our credibility within the industry. We have strong values of honour, cooperation, clear communication and the confidence</p>
-                that comes from being supported in a unit.
+                <p>At Nepal Machinery, we adopt a long-term perspective approach; our relationships founded on trust built our credibility within the industry. We have strong values of honour, cooperation, clear communication and the confidence that comes
+                    from being supported in a unit.</p>
                 <p> While we are proud of our past, we are looking forward to the future with optimism. We are continuously identifying, exploring and creating solutions to contribute positively to the industry and country for the long-term sustainability
                     of all. "
                 </p>
@@ -101,7 +101,7 @@
     <!-- aboutus  -->
     <div class="contanier-fluid" id="AboutUs">
         <div class="row">
-            <div class="col-md-6 justify-content-center align-self-center" id="abouttext" data-aos="zoom-in" data-aos-duration="600">
+            <div class="col-md-6 justify-content-center align-self-center aboutmain" id="abouttext" data-aos="zoom-in" data-aos-duration="600">
                 <p class="CEOhead" id="abouthead">About Us</p>
                 <p>Nepal Machinery Exim, or NME, was established in the year ____ to bring in Nepal its exceptional range of machines. Since then, Nepal Machinery has established itself as a leading name in the Nepal Machinery Industry with its countrywide
                     network of strong sales, service support and professional management.
@@ -119,7 +119,7 @@
                 </p> -->
             </div>
             <div class="col-md-6 aboutimgdiv">
-                <img src="Images/about.jpg" alt="" class="aboutimg">
+                <img src="Images/about12.jpg" alt="" class="aboutimg">
             </div>
         </div>
     </div>
